# bilitools-cli

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SKILL.md
.github/workflows/: release.yml
.hermes/plans/: 2026-06-11-audio-transcribe.md  2026-06-11-cheese-compatibility.md  2026-06-11-search-fingerprint-bootstrap.md
docs/: e2e-2026-06-11.md
src/: context.rs  doctor.rs  main.rs
src/backends/: paths.rs
src/cli/: analyze.rs  audio.rs  danmaku.rs  download.rs  mod.rs  ocr.rs  repl.rs  root.rs  search.rs  setup.rs  subtitle.rs
src/ipc/: aria2c.rs  audio.rs  bilibili_api.rs  danmaku.rs  mod.rs  playurl.rs  queue.rs  search.rs  shared.rs  subtitle.rs  transcribe.rs
src/ipc/ocr/: PERFORMANCE_HANDBACK.md  adaptive.rs  dedup.rs  mod.rs
src/ipc/storage/: mod.rs
tests/: playurl_e2e.rs
