[package]
name = "bilitools"
version = "1.4.7-cli.1"
edition = "2021"
description = "A pure-Rust CLI port of BiliTools, the Bilibili toolbox. Reuses the original Rust business logic (login, aria2, ffmpeg, queue, storage) with the Tauri GUI layer stripped out."
homepage = "https://github.com/btjawa/BiliTools"
repository = "https://github.com/btjawa/BiliTools"
license = "GPL-3.0-or-later"
authors = ["btjawa", "bilitools-cli contributors"]
keywords = ["bilibili", "downloader", "cli", "tauri"]
categories = ["command-line-utilities", "multimedia", "network"]
readme = "README.md"
rust-version = "1.80"

[lib]
name = "bilitools"
path = "src/lib.rs"

[[bin]]
name = "bilitools"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time", "fs", "signal", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client (decoupled from tauri_plugin_http)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "stream", "multipart", "cookies", "socks"] }

# Database — schema is shared with GUI BiliTools
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "time", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "chrono", "ansi"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
time = { version = "0.3", features = ["macros", "formatting", "parsing", "serde", "serde-well-known"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Crypto (B 站 WBI / Buvid3 / BiliTicket)
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"

# Random
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive", "wrap_help", "color", "unicode", "cargo"] }
rustyline = { version = "14", default-features = false, features = ["with-file-history"] }

# Tables (human mode only)
comfy-table = "7"

# Progress bars (human mode only)
indicatif = { version = "0.17", features = ["tokio"] }

# Paths (decoupled from tauri::Manager::path)
directories = "5"

# File walking
walkdir = "2"

# UUID / nanoid
uuid = { version = "1", features = ["v4"] }

# Cron for schedulers
cron = "0.12"

# Regex
regex = "1"

# QR code generation (for auth qrcode subcommand)
qrcode = { version = "0.14", default-features = false, features = ["image"] }

# Image processing (small)
image = { version = "0.25", default-features = false, features = ["png"] }

# Misc
once_cell = "1"
arc-swap = "1"
parking_lot = "0.12"
bytes = "1"
url = "2"

# Optional — only used by the `transcribe` feature for finding
# the `python3` and `sensevoice` executables on the user's PATH.
which = { version = "7", optional = true }

# Optional features — kept off by default to avoid bloat.
# Each feature should NOT pull new runtime dependencies; the
# `transcribe` feature only toggles code paths that shell out
# to an external Python CLI (sensevoice-skill).
[features]
default = []
# Enable `bilitools audio <bv> --transcribe` to transcribe downloaded
# audio via the external `sensevoice` CLI (https://github.com/nekobaimeow/sensevoice-skill).
# Build with: cargo build --release --features transcribe
transcribe = ["dep:which"]

[dev-dependencies]
# Test utilities
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

# Snapshot testing (optional but handy)
insta = { version = "1", features = ["yaml"] }

# Proptest (fuzz-y unit tests)
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
incremental = true
