[package]
name = "bilitools"
version = "1.4.7-cli.7"
edition = "2021"
description = "A pure-Rust CLI port of BiliTools, the Bilibili toolbox. Reuses the original Rust business logic (login, aria2, ffmpeg, queue, storage) with the Tauri GUI layer stripped out."
homepage = "https://github.com/nekobaimeow/bilitools-cli"
repository = "https://github.com/nekobaimeow/bilitools-cli"
license = "GPL-3.0-or-later"
authors = ["btjawa", "bilitools-cli contributors"]
keywords = ["bilibili", "downloader", "cli", "tauri"]
categories = ["command-line-utilities", "multimedia", "network"]
readme = "README.md"
rust-version = "1.80"

[lib]
name = "bilitools"
path = "src/lib.rs"

[[bin]]
name = "bilitools"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time", "fs", "signal", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client (decoupled from tauri_plugin_http)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "stream", "multipart", "cookies", "socks"] }

# Database — schema is shared with GUI BiliTools
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "time", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "chrono", "ansi"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
time = { version = "0.3", features = ["macros", "formatting", "parsing", "serde", "serde-well-known"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Crypto (B 站 WBI / Buvid3 / BiliTicket)
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"

# Compression (B 站 comment.bilibili.com now returns raw deflate instead of XML)
flate2 = "1"

# Random
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive", "wrap_help", "color", "unicode", "cargo"] }
rustyline = { version = "14", default-features = false, features = ["with-file-history"] }

# Tables (human mode only)
comfy-table = "7"

# Progress bars (human mode only)
indicatif = { version = "0.17", features = ["tokio"] }

# Paths (decoupled from tauri::Manager::path)
directories = "5"

# File walking
walkdir = "2"

# UUID / nanoid
uuid = { version = "1", features = ["v4"] }

# Cron for schedulers
cron = "0.12"

# Regex
regex = "1"

# QR code generation (for auth qrcode subcommand)
qrcode = { version = "0.14", default-features = false, features = ["image"] }

# Image processing (small; jpeg required for OCR frame extraction)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Offline OCR via PaddleOCR + MNN (PP-OCRv5 mobile). Always compiled in.
# ocr-rs is a Rust wrapper around the MNN inference engine that runs
# PaddleOCR models. We use it to extract hard-coded text from video
# frames or images without any Python process.
#
# We also depend on `imageproc` directly because ocr-rs's public
# `TextBox` struct has a public `rect: imageproc::rect::Rect` field
# whose methods we call. Cargo does not re-export transitive deps, so
# we declare it explicitly.
ocr-rs = { version = "2.2.2", default-features = false }
imageproc = { version = "0.25", default-features = false }

# Misc
once_cell = "1"
arc-swap = "1"
parking_lot = "0.12"
bytes = "1"
url = "2"

# Finds `python3` and `sensevoice` executables on the user's PATH
# for the built-in `audio --transcribe` ASR pipeline.
which = "7"

[dev-dependencies]
# Test utilities
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

# Snapshot testing (optional but handy)
insta = { version = "1", features = ["yaml"] }

# Proptest (fuzz-y unit tests)
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
incremental = true
